parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORA
    CORC
    DECIMAL
    READ
    UNSET

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> etiquetas
Rule 2     etiquetas -> etiquetas etiqueta
Rule 3     etiquetas -> etiqueta
Rule 4     etiqueta -> IDENTIFICADOR DOBLEPUNTO instrucciones
Rule 5     etiqueta -> MAIN DOBLEPUNTO instrucciones
Rule 6     instrucciones -> instrucciones instruccion
Rule 7     instrucciones -> instruccion
Rule 8     instruccion -> EXIT PUNTOCOMA
Rule 9     instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA
Rule 10    instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
Rule 11    instruccion -> GOTO IDENTIFICADOR PUNTOCOMA
Rule 12    expresion -> valor MAS valor
Rule 13    expresion -> valor MENOS valor
Rule 14    expresion -> valor POR valor
Rule 15    expresion -> valor DIVIDIDO valor
Rule 16    expresion -> valor
Rule 17    expresion -> MENOS valor
Rule 18    expresion -> PARA valor PARC
Rule 19    valor -> ENTERO
Rule 20    valor -> DOLAR IDENTIFICADOR

Terminals, with rules where they appear

CORA                 : 
CORC                 : 
DECIMAL              : 
DIVIDIDO             : 15
DOBLEPUNTO           : 4 5
DOLAR                : 10 20
ENTERO               : 19
EXIT                 : 8
GOTO                 : 11
IDENTIFICADOR        : 4 10 11 20
IGUAL                : 10
IMPRIMIR             : 9
MAIN                 : 5
MAS                  : 12
MENOS                : 13 17
PARA                 : 9 18
PARC                 : 9 18
POR                  : 14
PUNTOCOMA            : 8 9 10 11
READ                 : 
UNSET                : 
error                : 

Nonterminals, with rules where they appear

etiqueta             : 2 3
etiquetas            : 1 2
expresion            : 9 10
inicio               : 0
instruccion          : 6 7
instrucciones        : 4 5 6
valor                : 12 12 13 13 14 14 15 15 16 17 18

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . etiquetas
    (2) etiquetas -> . etiquetas etiqueta
    (3) etiquetas -> . etiqueta
    (4) etiqueta -> . IDENTIFICADOR DOBLEPUNTO instrucciones
    (5) etiqueta -> . MAIN DOBLEPUNTO instrucciones

    IDENTIFICADOR   shift and go to state 4
    MAIN            shift and go to state 5

    inicio                         shift and go to state 1
    etiquetas                      shift and go to state 2
    etiqueta                       shift and go to state 3

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> etiquetas .
    (2) etiquetas -> etiquetas . etiqueta
    (4) etiqueta -> . IDENTIFICADOR DOBLEPUNTO instrucciones
    (5) etiqueta -> . MAIN DOBLEPUNTO instrucciones

    $end            reduce using rule 1 (inicio -> etiquetas .)
    IDENTIFICADOR   shift and go to state 4
    MAIN            shift and go to state 5

    etiqueta                       shift and go to state 6

state 3

    (3) etiquetas -> etiqueta .

    IDENTIFICADOR   reduce using rule 3 (etiquetas -> etiqueta .)
    MAIN            reduce using rule 3 (etiquetas -> etiqueta .)
    $end            reduce using rule 3 (etiquetas -> etiqueta .)


state 4

    (4) etiqueta -> IDENTIFICADOR . DOBLEPUNTO instrucciones

    DOBLEPUNTO      shift and go to state 7


state 5

    (5) etiqueta -> MAIN . DOBLEPUNTO instrucciones

    DOBLEPUNTO      shift and go to state 8


state 6

    (2) etiquetas -> etiquetas etiqueta .

    IDENTIFICADOR   reduce using rule 2 (etiquetas -> etiquetas etiqueta .)
    MAIN            reduce using rule 2 (etiquetas -> etiquetas etiqueta .)
    $end            reduce using rule 2 (etiquetas -> etiquetas etiqueta .)


state 7

    (4) etiqueta -> IDENTIFICADOR DOBLEPUNTO . instrucciones
    (6) instrucciones -> . instrucciones instruccion
    (7) instrucciones -> . instruccion
    (8) instruccion -> . EXIT PUNTOCOMA
    (9) instruccion -> . IMPRIMIR PARA expresion PARC PUNTOCOMA
    (10) instruccion -> . DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (11) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA

    EXIT            shift and go to state 11
    IMPRIMIR        shift and go to state 12
    DOLAR           shift and go to state 13
    GOTO            shift and go to state 14

    instrucciones                  shift and go to state 9
    instruccion                    shift and go to state 10

state 8

    (5) etiqueta -> MAIN DOBLEPUNTO . instrucciones
    (6) instrucciones -> . instrucciones instruccion
    (7) instrucciones -> . instruccion
    (8) instruccion -> . EXIT PUNTOCOMA
    (9) instruccion -> . IMPRIMIR PARA expresion PARC PUNTOCOMA
    (10) instruccion -> . DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (11) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA

    EXIT            shift and go to state 11
    IMPRIMIR        shift and go to state 12
    DOLAR           shift and go to state 13
    GOTO            shift and go to state 14

    instrucciones                  shift and go to state 15
    instruccion                    shift and go to state 10

state 9

    (4) etiqueta -> IDENTIFICADOR DOBLEPUNTO instrucciones .
    (6) instrucciones -> instrucciones . instruccion
    (8) instruccion -> . EXIT PUNTOCOMA
    (9) instruccion -> . IMPRIMIR PARA expresion PARC PUNTOCOMA
    (10) instruccion -> . DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (11) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   reduce using rule 4 (etiqueta -> IDENTIFICADOR DOBLEPUNTO instrucciones .)
    MAIN            reduce using rule 4 (etiqueta -> IDENTIFICADOR DOBLEPUNTO instrucciones .)
    $end            reduce using rule 4 (etiqueta -> IDENTIFICADOR DOBLEPUNTO instrucciones .)
    EXIT            shift and go to state 11
    IMPRIMIR        shift and go to state 12
    DOLAR           shift and go to state 13
    GOTO            shift and go to state 14

    instruccion                    shift and go to state 16

state 10

    (7) instrucciones -> instruccion .

    EXIT            reduce using rule 7 (instrucciones -> instruccion .)
    IMPRIMIR        reduce using rule 7 (instrucciones -> instruccion .)
    DOLAR           reduce using rule 7 (instrucciones -> instruccion .)
    GOTO            reduce using rule 7 (instrucciones -> instruccion .)
    IDENTIFICADOR   reduce using rule 7 (instrucciones -> instruccion .)
    MAIN            reduce using rule 7 (instrucciones -> instruccion .)
    $end            reduce using rule 7 (instrucciones -> instruccion .)


state 11

    (8) instruccion -> EXIT . PUNTOCOMA

    PUNTOCOMA       shift and go to state 17


state 12

    (9) instruccion -> IMPRIMIR . PARA expresion PARC PUNTOCOMA

    PARA            shift and go to state 18


state 13

    (10) instruccion -> DOLAR . IDENTIFICADOR IGUAL expresion PUNTOCOMA

    IDENTIFICADOR   shift and go to state 19


state 14

    (11) instruccion -> GOTO . IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   shift and go to state 20


state 15

    (5) etiqueta -> MAIN DOBLEPUNTO instrucciones .
    (6) instrucciones -> instrucciones . instruccion
    (8) instruccion -> . EXIT PUNTOCOMA
    (9) instruccion -> . IMPRIMIR PARA expresion PARC PUNTOCOMA
    (10) instruccion -> . DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA
    (11) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   reduce using rule 5 (etiqueta -> MAIN DOBLEPUNTO instrucciones .)
    MAIN            reduce using rule 5 (etiqueta -> MAIN DOBLEPUNTO instrucciones .)
    $end            reduce using rule 5 (etiqueta -> MAIN DOBLEPUNTO instrucciones .)
    EXIT            shift and go to state 11
    IMPRIMIR        shift and go to state 12
    DOLAR           shift and go to state 13
    GOTO            shift and go to state 14

    instruccion                    shift and go to state 16

state 16

    (6) instrucciones -> instrucciones instruccion .

    EXIT            reduce using rule 6 (instrucciones -> instrucciones instruccion .)
    IMPRIMIR        reduce using rule 6 (instrucciones -> instrucciones instruccion .)
    DOLAR           reduce using rule 6 (instrucciones -> instrucciones instruccion .)
    GOTO            reduce using rule 6 (instrucciones -> instrucciones instruccion .)
    IDENTIFICADOR   reduce using rule 6 (instrucciones -> instrucciones instruccion .)
    MAIN            reduce using rule 6 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 6 (instrucciones -> instrucciones instruccion .)


state 17

    (8) instruccion -> EXIT PUNTOCOMA .

    EXIT            reduce using rule 8 (instruccion -> EXIT PUNTOCOMA .)
    IMPRIMIR        reduce using rule 8 (instruccion -> EXIT PUNTOCOMA .)
    DOLAR           reduce using rule 8 (instruccion -> EXIT PUNTOCOMA .)
    GOTO            reduce using rule 8 (instruccion -> EXIT PUNTOCOMA .)
    IDENTIFICADOR   reduce using rule 8 (instruccion -> EXIT PUNTOCOMA .)
    MAIN            reduce using rule 8 (instruccion -> EXIT PUNTOCOMA .)
    $end            reduce using rule 8 (instruccion -> EXIT PUNTOCOMA .)


state 18

    (9) instruccion -> IMPRIMIR PARA . expresion PARC PUNTOCOMA
    (12) expresion -> . valor MAS valor
    (13) expresion -> . valor MENOS valor
    (14) expresion -> . valor POR valor
    (15) expresion -> . valor DIVIDIDO valor
    (16) expresion -> . valor
    (17) expresion -> . MENOS valor
    (18) expresion -> . PARA valor PARC
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    MENOS           shift and go to state 24
    PARA            shift and go to state 21
    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    expresion                      shift and go to state 22
    valor                          shift and go to state 23

state 19

    (10) instruccion -> DOLAR IDENTIFICADOR . IGUAL expresion PUNTOCOMA

    IGUAL           shift and go to state 27


state 20

    (11) instruccion -> GOTO IDENTIFICADOR . PUNTOCOMA

    PUNTOCOMA       shift and go to state 28


state 21

    (18) expresion -> PARA . valor PARC
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    valor                          shift and go to state 29

state 22

    (9) instruccion -> IMPRIMIR PARA expresion . PARC PUNTOCOMA

    PARC            shift and go to state 30


state 23

    (12) expresion -> valor . MAS valor
    (13) expresion -> valor . MENOS valor
    (14) expresion -> valor . POR valor
    (15) expresion -> valor . DIVIDIDO valor
    (16) expresion -> valor .

    MAS             shift and go to state 31
    MENOS           shift and go to state 32
    POR             shift and go to state 33
    DIVIDIDO        shift and go to state 34
    PARC            reduce using rule 16 (expresion -> valor .)
    PUNTOCOMA       reduce using rule 16 (expresion -> valor .)


state 24

    (17) expresion -> MENOS . valor
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    valor                          shift and go to state 35

state 25

    (19) valor -> ENTERO .

    MAS             reduce using rule 19 (valor -> ENTERO .)
    MENOS           reduce using rule 19 (valor -> ENTERO .)
    POR             reduce using rule 19 (valor -> ENTERO .)
    DIVIDIDO        reduce using rule 19 (valor -> ENTERO .)
    PARC            reduce using rule 19 (valor -> ENTERO .)
    PUNTOCOMA       reduce using rule 19 (valor -> ENTERO .)


state 26

    (20) valor -> DOLAR . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 36


state 27

    (10) instruccion -> DOLAR IDENTIFICADOR IGUAL . expresion PUNTOCOMA
    (12) expresion -> . valor MAS valor
    (13) expresion -> . valor MENOS valor
    (14) expresion -> . valor POR valor
    (15) expresion -> . valor DIVIDIDO valor
    (16) expresion -> . valor
    (17) expresion -> . MENOS valor
    (18) expresion -> . PARA valor PARC
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    MENOS           shift and go to state 24
    PARA            shift and go to state 21
    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    expresion                      shift and go to state 37
    valor                          shift and go to state 23

state 28

    (11) instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .

    EXIT            reduce using rule 11 (instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .)
    IMPRIMIR        reduce using rule 11 (instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .)
    DOLAR           reduce using rule 11 (instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .)
    GOTO            reduce using rule 11 (instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .)
    IDENTIFICADOR   reduce using rule 11 (instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .)
    MAIN            reduce using rule 11 (instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .)
    $end            reduce using rule 11 (instruccion -> GOTO IDENTIFICADOR PUNTOCOMA .)


state 29

    (18) expresion -> PARA valor . PARC

    PARC            shift and go to state 38


state 30

    (9) instruccion -> IMPRIMIR PARA expresion PARC . PUNTOCOMA

    PUNTOCOMA       shift and go to state 39


state 31

    (12) expresion -> valor MAS . valor
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    valor                          shift and go to state 40

state 32

    (13) expresion -> valor MENOS . valor
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    valor                          shift and go to state 41

state 33

    (14) expresion -> valor POR . valor
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    valor                          shift and go to state 42

state 34

    (15) expresion -> valor DIVIDIDO . valor
    (19) valor -> . ENTERO
    (20) valor -> . DOLAR IDENTIFICADOR

    ENTERO          shift and go to state 25
    DOLAR           shift and go to state 26

    valor                          shift and go to state 43

state 35

    (17) expresion -> MENOS valor .

    PARC            reduce using rule 17 (expresion -> MENOS valor .)
    PUNTOCOMA       reduce using rule 17 (expresion -> MENOS valor .)


state 36

    (20) valor -> DOLAR IDENTIFICADOR .

    MAS             reduce using rule 20 (valor -> DOLAR IDENTIFICADOR .)
    MENOS           reduce using rule 20 (valor -> DOLAR IDENTIFICADOR .)
    POR             reduce using rule 20 (valor -> DOLAR IDENTIFICADOR .)
    DIVIDIDO        reduce using rule 20 (valor -> DOLAR IDENTIFICADOR .)
    PARC            reduce using rule 20 (valor -> DOLAR IDENTIFICADOR .)
    PUNTOCOMA       reduce using rule 20 (valor -> DOLAR IDENTIFICADOR .)


state 37

    (10) instruccion -> DOLAR IDENTIFICADOR IGUAL expresion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 44


state 38

    (18) expresion -> PARA valor PARC .

    PARC            reduce using rule 18 (expresion -> PARA valor PARC .)
    PUNTOCOMA       reduce using rule 18 (expresion -> PARA valor PARC .)


state 39

    (9) instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .

    EXIT            reduce using rule 9 (instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .)
    IMPRIMIR        reduce using rule 9 (instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .)
    DOLAR           reduce using rule 9 (instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .)
    GOTO            reduce using rule 9 (instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .)
    IDENTIFICADOR   reduce using rule 9 (instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .)
    MAIN            reduce using rule 9 (instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .)
    $end            reduce using rule 9 (instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA .)


state 40

    (12) expresion -> valor MAS valor .

    PARC            reduce using rule 12 (expresion -> valor MAS valor .)
    PUNTOCOMA       reduce using rule 12 (expresion -> valor MAS valor .)


state 41

    (13) expresion -> valor MENOS valor .

    PARC            reduce using rule 13 (expresion -> valor MENOS valor .)
    PUNTOCOMA       reduce using rule 13 (expresion -> valor MENOS valor .)


state 42

    (14) expresion -> valor POR valor .

    PARC            reduce using rule 14 (expresion -> valor POR valor .)
    PUNTOCOMA       reduce using rule 14 (expresion -> valor POR valor .)


state 43

    (15) expresion -> valor DIVIDIDO valor .

    PARC            reduce using rule 15 (expresion -> valor DIVIDIDO valor .)
    PUNTOCOMA       reduce using rule 15 (expresion -> valor DIVIDIDO valor .)


state 44

    (10) instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .

    EXIT            reduce using rule 10 (instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .)
    IMPRIMIR        reduce using rule 10 (instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .)
    DOLAR           reduce using rule 10 (instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .)
    GOTO            reduce using rule 10 (instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .)
    IDENTIFICADOR   reduce using rule 10 (instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .)
    MAIN            reduce using rule 10 (instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .)
    $end            reduce using rule 10 (instruccion -> DOLAR IDENTIFICADOR IGUAL expresion PUNTOCOMA .)

